syntax = "proto3";

option csharp_namespace = "VizsgaGRPC";

package Vizsga;

// The greeting service definition.
service Vizsga {
    rpc List(Empty) returns (stream Product) {}
    rpc Add(Data) returns (Result) {}
    rpc Bid(BidProduct) returns (Result) {}
    rpc Modify(ModifyProduct) returns (Result) {}
    rpc Delete(DeleteProduct) returns (Result) {}
    rpc Login(User) returns (Session_Id){}
    rpc Logout(Session_Id) returns (Result) {}
    rpc Register(User) returns (Result){}

}

message Empty{}

message User {
    string name = 1;
    string password = 2;
}
message Session_Id{
    string id = 1;
}
message Result {
    string success = 1;
}
message Data {
    string name = 1;
    string code = 2;
    int32 price = 3;
    string uid = 4;
}
message Product {
    string name = 1;
    string code = 2;
    int32 cur_price = 3;
    string username = 4;
}
message BidProduct {
    string code = 1;
    int32 price = 2;
    string uid = 3;
}
message ModifyProduct {
    string code = 1;
    int32 price = 2;
    string uid = 3;
}
message DeleteProduct {
    string code = 1;
    string uid = 2;
}

